# julia

./: .gitignore  .pre-commit-config.yml  README.md  pyproject.toml
.github/workflows/: ci.yml  selective-tests.yml
julia/: _version.py  metal_test.py
julia/core/: __init__.py  autograd.py  autograd_engine.py  data.py  data_utils.py  exceptions.py  ir.py  ir_bridge.py  loss.py  memory.py  metrics.py  onnx.py  ops.py  ops_attention.py  ops_nn.py  optim.py  profiler.py  tensor.py
julia/core/backends/clang/: __init__.py  compiler.py
julia/core/backends/cuda/: compiler.py  device_management.py
julia/core/backends/cuda/cuda_kernels/: add.cu  cuda_notes.md  element_wise.cu  hessian.cu  matrix.cu  sub.cu
julia/core/backends/cuda/ptx_kernels/: add.ptx  ptx_notes.md  sub.ptx
julia/core/backends/llvm/: compiler.py
julia/core/backends/metal/: __init__.py  compiler.py  device_management.py  kernals.metal
julia/core/backends/triton/: compiler.py
julia/core/math/: jacobian.py  jvp.py  vjp.py
julia/core/nn/: attention.py  conv.py  layers.py  pooling.py  recurrent.py
julia/core/utils/: backend_registry.py  onnx_registry.py  op_registry.py  ops_registry.py
julia/examples/: kan_example.py  rnn_example.py  toy_cnn.py  transformer.py
julia/tests/: 2dmaxpool_ag_test.py  attention1_test.py  base_optim_and_activation_test.py  clang_simple1_test.py  class_loss_test.py  cnn1_test.py  cnn2_test.py  conftest.py  conv1_test.py  conv_autograd_grad_test.py  conv_autograd_test.py  exception_sys1_test.py  jacobian_test.py  jvp_test.py  lib_comp_test.py  llvm1_simple_test.py  logic1_test.py  matmul_test.py  multi_output_test.py  onnx_test.py  ops_test.py  optim_convergence_test.py  para_grad_test.py  poolingfunc_ag_test.py  profiling_test.py  pytorch_adaptivepooling.py  reg_loss_test.py  retain_graph_test.py  second_derivative_graph_test.py  shape_test.py  simple_linear1_test.py  template_loss_test.py  test_placeholder.py  transpose_test.py  updated_pooling_test.py
